--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
     "pods": "^2.0.0",
-    "react": "16.11.0",
+    "react": "^16.11.0",
     "react-native": "0.62.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.7.1",
@@ -30,7 +30,7 @@
     "eslint": "6.8.0",
     "jest": "^25.2.7",
     "metro-react-native-babel-preset": "0.58.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "preset": "react-native"
