--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest --json --outputFile=output.json",
+    "test": "jest --json",
     "checkTest": "node checkTest.js",
     "lint": "eslint .",
     "pods": "cd ios && pod _1.6.1_ install || echo \"Dependency issues with `npm run pods`? Try `npm run pods-update`\""
